@@ -2,7 +2,7 @@
  OmegaT 4.1.5 update 1
 ----------------------------------------------------------------------
   3 Enhancements
-  0 Bug fix
+  1 Bug fix
   0 Localisation update
 ----------------------------------------------------------------------
 4.1.5 update 1 vs 4.1.5
@@ -20,6 +20,11 @@ https://sourceforge.net/p/omegat/feature-requests/1389/
 
   - Automatic conversion of numbers when inserting fuzzy matches now 
 works with Ctrl+I in addition to Ctrl+R
+
+  Bug fixes:
+  
+  - Segment marked as empty causes error when running QA check script
+  https://sourceforge.net/p/omegat/bugs/915/
 
 ----------------------------------------------------------------------
  OmegaT 4.1.5 (2018-06-08)
